tests/test_proof/bad/let_in_condition-empty.catala_en
## Test

```catala
declaration scope A:
  context x content boolean

scope A:
  definition x under condition
    let y equals false in
    y 
  consequence equals true
```

```catala-test-inline
$ catala Interpret -s A
[ERROR] This variable evaluated to an empty term (no rule that defined it applied in this situation)

┌─⯈ tests/test_proof/bad/let_in_condition-empty.catala_en:5.10-11:
└─┐
5 │   context x content boolean
  │           ‾
  └─ Test
#return code 255#
```
